# turtlebot3_custom

./: .README.md.swp  CMakeLists.txt  README.md  package.xml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/turtlebot3_custom/share/turtlebot3_custom/: package.bash  package.zsh
launch/: robot_state_publisher.launch.py  spawn_turtlebot3.launch.py  turtlebot3_brown3.launch.py  turtlebot3_custom.launch.py  turtlebot3_empty.launch.py
log/: latest_build
maps/: custom_map0.pgm  custom_map0.yaml
models/turtlebot3_brown3/: model.config  model.sdf
models/turtlebot3_custom/: model.config  model.sdf
models/turtlebot3_custom/meshes/: AIEB_full_walls.stl  brown3_walls.dae  custom_walls.stl
models/turtlebot3_waffle_pi/: .model.sdf.swp  model.sdf
src/: goal_publisher.cpp  goallist_publisher.cpp
turtlebot3_custom/: __init__.py  teleop_keyboard.py
worlds/: turtlebot3_brown3.world  turtlebot3_custom.world  turtlebot3_empty.world
